--- a/_config.yml
+++ b/_config.yml
@@ -2,18 +2,17 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: Sumin
-middle_name: 
-last_name: Park
+title: 김민트의 사이트 # the website title (if blank, full name will be used instead)
+first_name: Mint
+middle_name: C.
+last_name: Kim
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  아이스크림 가게에서 민트초콜릿을 찾아 주세요
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  서울대학교 2025학년도 1학기 [인문데이터과학개론] 실습
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
-  Photos from <a href="https://unsplash.com" target="_blank">Unsplash</a>.
 keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
 lang: ko # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: ⚛️ # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
