--- a/_config.yml
+++ b/_config.yml
@@ -87,8 +87,8 @@ bing_site_verification: # out your bing-site-verification ID (Bing Webmaster)
 # Blog
 # -----------------------------------------------------------------------------
 
-blog_name: al-folio # blog_name will be displayed in your blog page
-blog_description: a simple whitespace theme for academics
+blog_name: 김민트의 블로그 # blog_name will be displayed in your blog page
+blog_description: "[인문데이터과학개론] 수업 실습용"
 permalink: /blog/:year/:title/
 lsi: false # produce an index for related posts
 
