2025년 5월 7일 수업

--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -2,11 +2,11 @@
   type: map
   contents:
     - name: Full Name
-      value: Albert Einstein
+      value: Sumin Park
     - name: Date of Birth
-      value: 14th March 1879
+      value: 17th February 1985
     - name: Languages
-      value: English, German
+      value: Korean, English
 
 - title: Education
   type: time_table
